tests/cases/literals/errors/class-removed.ari
class Thing {
}

fn main() -> i64 {
  return 0;
}
